--- a/KRS_brands_page.html
+++ b/KRS_brands_page.html
@@ -1,7 +1,10 @@
 
-<!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>
+<head></head>
+<body>
+  <div style="text-align:center; margin: 20px 0;">
+    <img src="images/logo.png" alt="شعار متجر KRS" style="width:150px; height:auto;">
+  </div>
   <meta charset="UTF-8">
   <title>البرندات - متجر KRS</title>
   <style>
