--- a/KRS_brands_page.html
+++ b/KRS_brands_page.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
   <div style="text-align:center; margin: 20px 0;">
-    <img src="images/logo.png" alt="شعار متجر KRS" style="width:150px; height:auto;">
+    <img src="images/logo.jpg" alt="شعار متجر KRS" style="width:150px; height:auto;">
   </div>
   <meta charset="UTF-8">
   <title>البرندات - متجر KRS</title>
