--- a/KRS_brands_page.html
+++ b/KRS_brands_page.html
@@ -2,8 +2,14 @@
 <html lang="ar" dir="rtl">
 <head></head>
 <body>
-    <img src="images/logo.jpg" alt="شعار متجر KRS" style="width:150px; height:auto;">
-  </div>
+    <!-- شعار المتجر -->
+<div style="text-align:center; margin:20px 0;">
+  <img src="images/1ogo.jpg"
+       alt="شعار متجر KRS"
+       style="width:150px; height:auto;">
+  <p style="font-weight:bold; font-size:16px;">متجر KRS لقطع التعديل والتزويد</p>
+</div>
+
   <meta charset="UTF-8">
   <title>البرندات - متجر KRS</title>
   <style>
