--- a/KRS_brands_page.html
+++ b/KRS_brands_page.html
@@ -1,50 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head><head>
+<head>
   <meta charset="UTF-8">
-  <title>متجر KRS</title>
-
-  <!-- كود التنسيق هنا -->
+  <title>البرندات - متجر KRS</title>
   <style>
-    .brands {
-      display: flex;
-      gap: 30px;
-      justify-content: center;
-      align-items: center;
-      margin-top: 40px;
-      flex-wrap: wrap;
-    }
-    .brand-item { text-align: center; }
-    .brand-item img {
-      width: 100px;
-      height: auto;
-      margin-bottom: 10px;
-    }
-    .brand-item span {
-      font-weight: bold;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <!-- شعار المتجر هنا -->
-  <div style="text-align:center;">
-    <img src="images/logo.jpg" alt="شعار المتجر" style="width:150px;">
-  </div>
-
-  <!-- هنا نضيف كود الشعارات -->
-  <h2 style="text-align:center;">شعارات البراندات</h2>
-  <div class="brands">
-    <div class="brand-item">
-      <img src="images/BTR.jpg" alt="BTR">
-      <span>BTR</span>
-    </div>
-    <div class="brand-item">
-      <img src="images/aFe.jpg" alt="aFe">
-      <span>aFe</span>
-    </div>
-  </div>
-</body>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f7f7f7;
