--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
 
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>متجر KRS لقطع التعديل والتزويد</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #1f2937;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+    }
+    h2 {
+      color: #1f2937;
+    }
+    .brand-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 15px;
+    }
+    .brand-grid a {
+      text-decoration: none;
+      background-color: white;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 10px;
+      text-align: center;
+      color: #1f2937;
+      font-weight: bold;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100px;
+      justify-content: center;
+    }
+    .brand-grid a .logo-box {
+      width: 40px;
+      height: 40px;
+      background-color: #e0e0e0;
+      border-radius: 5px;
+      margin-bottom: 5px;
+    }
+    footer {
+      background-color: #1f2937;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
+      margin-top: 10px;
+    }
+    .social-icons a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+    }
+    .social-icons img {
+      width: 14px;
+      height: 14px;
+      margin-left: 5px;
+    }
+    .social-icons a:hover {
+      text-decoration: underline;
+    }
+    .whatsapp-link {
+      color: #25d366;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>متجر KRS لقطع التعديل والتزويد</h1>
+    <p>تعديل وتزويد المحركات الأمريكية - نوفر جميع قطع الأداء العالي من أقوى البرندات العالمية المتخصصة في التعديل والسباقات</p>
+  </header>
+
+  <main>
+    <h2>اختر البراند</h2>
+    <div class="brand-grid">
+  <a href="#MSD"><div class="logo-box"></div>MSD</a>
+  <a href="#EXCEED"><div class="logo-box"></div>EXCEED</a>
+  <a href="#BTR"><div class="logo-box"></div>BTR</a>
+  <a href="#TEXAS_SPEED"><div class="logo-box"></div>TEXAS SPEED</a>
+  <a href="#AFE"><div class="logo-box"></div>aFe</a>
+  <a href="#VCM"><div class="logo-box"></div>VCM</a>
+  <a href="#LUCAS"><div class="logo-box"></div>LUCAS</a>
+  <a href="#EPMAN"><div class="logo-box"></div>EPMAN</a>
+  <a href="#ARP"><div class="logo-box"></div>ARP</a>
+  <a href="#AEM"><div class="logo-box"></div>AEM</a>
+  <a href="#MAHLE"><div class="logo-box"></div>MAHLE</a>
+  <a href="#ACDELCO"><div class="logo-box"></div>ACDELCO</a>
+  <a href="#NGK"><div class="logo-box"></div>NGK</a>
+  <a href="#LINGENFELTER"><div class="logo-box"></div>LINGENFELTER</a>
+  <a href="#GM"><div class="logo-box"></div>GM</a>
+  <a href="#ROLLMASTER"><div class="logo-box"></div>ROLLMASTER</a>
+  <a href="#VP"><div class="logo-box"></div>VP</a>
+  <a href="#BOSCH"><div class="logo-box"></div>BOSCH</a>
+  <a href="#SPECTRE"><div class="logo-box"></div>SPECTRE</a>
+  <a href="#BOOST"><div class="logo-box"></div>BOOST</a>
+  <a href="#SUPER_PRO"><div class="logo-box"></div>Super Pro</a>
+  <a href="#PAC"><div class="logo-box"></div>PAC</a>
+  <a href="#DICOM"><div class="logo-box"></div>Dicom</a>
+  <a href="#POWER"><div class="logo-box"></div>POWER</a>
+  <a href="#TI_AUTOMOTIVE"><div class="logo-box"></div>TI Automotive</a>
+  <a href="#MELLING"><div class="logo-box"></div>MELLING</a>
+  <a href="#AEROMOTIVE"><div class="logo-box"></div>AEROMOTIVE</a>
+  <a href="#FTE"><div class="logo-box"></div>FTE</a>
+  <a href="#KN"><div class="logo-box"></div>K&N</a>
+  <a href="#LUFII"><div class="logo-box"></div>Lufii</a>
+  <a href="#SNOW"><div class="logo-box"></div>SNOW</a>
+  <a href="#MCLEOD"><div class="logo-box"></div>McLeod</a>
+  <a href="#TCL"><div class="logo-box"></div>TCL</a>
+  <a href="#DRC"><div class="logo-box"></div>DRC</a>
+  <a href="#BILSTEIN"><div class="logo-box"></div>BILSTEIN</a>
+  <a href="#COMETIC"><div class="logo-box"></div>COMETIC</a>
+  <a href="#HPTUNERS"><div class="logo-box"></div>Hptuners</a>
+  <a href="#KING_SPRINGS"><div class="logo-box"></div>King Springs</a>
+  <a href="#VOGTLAND"><div class="logo-box"></div>VOGTLAND</a>
+  <a href="#SCT_X4"><div class="logo-box"></div>SCT X4</a>
+  <a href="#MOPAR"><div class="logo-box"></div>MOPAR</a>
+  <a href="#LUKREPSET"><div class="logo-box"></div>LUkRepSet</a>
+</div>
+  </main>
+
+  <footer>
+    <div>
+     
+  <div>
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="14" style="vertical-align: middle; margin-left: 5px;"> للتواصل عبر الواتساب:<br>
+    <a class="whatsapp-link" href="https://wa.me/966544298850" target="_blank">0544298850</a> / 
+    <a class="whatsapp-link" href="https://wa.me/966504214480" target="_blank">0504214480</a> / 
+    <a class="whatsapp-link" href="https://wa.me/966548420912" target="_blank">0548420912</a>
+  </div>
+  <div class="social-icons" style="margin-top: 15px;">
+    <a href="https://haraj.com.sa/users/kld-dk" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn.haraj.com.sa/haraj/images/logo.png" alt="Haraj" style="width:18px; height:18px; margin-left:5px;">
+      موقع حراج
+    </a>
+    <a href="https://www.instagram.com/KhalidRacingShop" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" style="width:14px; height:14px; margin-left:5px;">
+      انستقرام
+    </a>
+    <a href="https://www.snapchat.com/add/Khaledqadi2002" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c4/Snapchat_logo.svg/1200px-Snapchat_logo.svg.png" alt="Snapchat" style="width:14px; height:14px; margin-left:5px;">
+      سناب شات
+    </a>
+    <a href="https://www.twitter.com/KhalidRacingShop" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" style="width:14px; height:14px; margin-left:5px;">
+      تويتر
+    </a>
+    <a href="https://www.tiktok.com" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok" style="width:14px; height:14px; margin-left:5px;">
+      تيك توك
+    </a>
+    <a href="https://www.youtube.com/results?search_query=Khalid+Racing+Shop" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" style="width:14px; height:14px; margin-left:5px;">
+      يوتيوب
+    </a>
+  </div>
+  <br>
+  <div>جميع الحقوق محفوظة © متجر KRS</div 2025>
+</footer> 2025
+
+
+
