--- a/brands/msd.html
+++ b/brands/msd.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <title>منتجات MSD</title>
+  <link rel="stylesheet" href="../style.css" />
+</head>
+<body>
+  <header>
+    <h1>منتجات MSD</h1>
+  </header>
+  <main>
+    <p>هنا تقدر تضيف تفاصيل المنتجات والصور والأسعار.</p>
+    <a href="../index.html">العودة للرئيسية</a>
+  </main>
+</body>
+</html>
