--- a/index.html
+++ b/index.html
@@ -1,170 +1,57 @@
-<div class="brands-grid">
-  <a class="brand-box" href="brands/msd.html">
-    <img src="images/msd.png" alt="MSD" />
-    <span>MSD</span>
-  </a>
-  <a class="brand-box" href="brands/exceed.html">
-    <img src="images/coming-soon.png" alt="EXCEED" />
-    <span>EXCEED</span>
-  </a>
-  <a class="brand-box" href="brands/btr.html">
-    <img src="images/coming-soon.png" alt="BTR" />
-    <span>BTR</span>
-  </a>
-  <a class="brand-box" href="brands/texas_speed.html">
-    <img src="images/coming-soon.png" alt="TEXAS SPEED" />
-    <span>TEXAS SPEED</span>
-  </a>
-  <a class="brand-box" href="brands/afe.html">
-    <img src="images/coming-soon.png" alt="aFe" />
-    <span>aFe</span>
-  </a>
-  <a class="brand-box" href="brands/vcm.html">
-    <img src="images/coming-soon.png" alt="VCM" />
-    <span>VCM</span>
-  </a>
-  <a class="brand-box" href="brands/lucas.html">
-    <img src="images/coming-soon.png" alt="LUCAS" />
-    <span>LUCAS</span>
-  </a>
-  <a class="brand-box" href="brands/epman.html">
-    <img src="images/coming-soon.png" alt="EPMAN" />
-    <span>EPMAN</span>
-  </a>
-  <a class="brand-box" href="brands/arp.html">
-    <img src="images/coming-soon.png" alt="ARP" />
-    <span>ARP</span>
-  </a>
-  <a class="brand-box" href="brands/aem.html">
-    <img src="images/coming-soon.png" alt="AEM" />
-    <span>AEM</span>
-  </a>
-  <a class="brand-box" href="brands/mahle.html">
-    <img src="images/coming-soon.png" alt="MAHLE" />
-    <span>MAHLE</span>
-  </a>
-  <a class="brand-box" href="brands/acdelco.html">
-    <img src="images/coming-soon.png" alt="ACDELCO" />
-    <span>ACDELCO</span>
-  </a>
-  <a class="brand-box" href="brands/ngk.html">
-    <img src="images/coming-soon.png" alt="NGK" />
-    <span>NGK</span>
-  </a>
-  <a class="brand-box" href="brands/lingenfelter.html">
-    <img src="images/coming-soon.png" alt="LINGENFELTER" />
-    <span>LINGENFELTER</span>
-  </a>
-  <a class="brand-box" href="brands/gm.html">
-    <img src="images/coming-soon.png" alt="GM" />
-    <span>GM</span>
-  </a>
-  <a class="brand-box" href="brands/rollmaster.html">
-    <img src="images/coming-soon.png" alt="ROLLMASTER" />
-    <span>ROLLMASTER</span>
-  </a>
-  <a class="brand-box" href="brands/vp.html">
-    <img src="images/coming-soon.png" alt="VP" />
-    <span>VP</span>
-  </a>
-  <a class="brand-box" href="brands/bosch.html">
-    <img src="images/coming-soon.png" alt="BOSCH" />
-    <span>BOSCH</span>
-  </a>
-  <a class="brand-box" href="brands/spectre.html">
-    <img src="images/coming-soon.png" alt="SPECTRE" />
-    <span>SPECTRE</span>
-  </a>
-  <a class="brand-box" href="brands/boost.html">
-    <img src="images/coming-soon.png" alt="BOOST" />
-    <span>BOOST</span>
-  </a>
-  <a class="brand-box" href="brands/super_pro.html">
-    <img src="images/coming-soon.png" alt="Super Pro" />
-    <span>Super Pro</span>
-  </a>
-  <a class="brand-box" href="brands/pac.html">
-    <img src="images/coming-soon.png" alt="PAC" />
-    <span>PAC</span>
-  </a>
-  <a class="brand-box" href="brands/dicom.html">
-    <img src="images/coming-soon.png" alt="Dicom" />
-    <span>Dicom</span>
-  </a>
-  <a class="brand-box" href="brands/power.html">
-    <img src="images/coming-soon.png" alt="POWER" />
-    <span>POWER</span>
-  </a>
-  <a class="brand-box" href="brands/ti_automotive.html">
-    <img src="images/coming-soon.png" alt="TI Automotive" />
-    <span>TI Automotive</span>
-  </a>
-  <a class="brand-box" href="brands/melling.html">
-    <img src="images/coming-soon.png" alt="MELLING" />
-    <span>MELLING</span>
-  </a>
-  <a class="brand-box" href="brands/aeromotive.html">
-    <img src="images/coming-soon.png" alt="AEROMOTIVE" />
-    <span>AEROMOTIVE</span>
-  </a>
-  <a class="brand-box" href="brands/fte.html">
-    <img src="images/coming-soon.png" alt="FTE" />
-    <span>FTE</span>
-  </a>
-  <a class="brand-box" href="brands/kn.html">
-    <img src="images/coming-soon.png" alt="K&N" />
-    <span>K&amp;N</span>
-  </a>
-  <a class="brand-box" href="brands/lufii.html">
-    <img src="images/coming-soon.png" alt="Lufii" />
-    <span>Lufii</span>
-  </a>
-  <a class="brand-box" href="brands/snow.html">
-    <img src="images/coming-soon.png" alt="SNOW" />
-    <span>SNOW</span>
-  </a>
-  <a class="brand-box" href="brands/mcleod.html">
-    <img src="images/coming-soon.png" alt="McLeod" />
-    <span>McLeod</span>
-  </a>
-  <a class="brand-box" href="brands/tcl.html">
-    <img src="images/coming-soon.png" alt="TCL" />
-    <span>TCL</span>
-  </a>
-  <a class="brand-box" href="brands/drc.html">
-    <img src="images/coming-soon.png" alt="DRC" />
-    <span>DRC</span>
-  </a>
-  <a class="brand-box" href="brands/bilstein.html">
-    <img src="images/coming-soon.png" alt="BILSTEIN" />
-    <span>BILSTEIN</span>
-  </a>
-  <a class="brand-box" href="brands/cometic.html">
-    <img src="images/coming-soon.png" alt="COMETIC" />
-    <span>COMETIC</span>
-  </a>
-  <a class="brand-box" href="brands/hptuners.html">
-    <img src="images/coming-soon.png" alt="Hptuners" />
-    <span>Hptuners</span>
-  </a>
-  <a class="brand-box" href="brands/king_springs.html">
-    <img src="images/coming-soon.png" alt="King Springs" />
-    <span>King Springs</span>
-  </a>
-  <a class="brand-box" href="brands/vogtland.html">
-    <img src="images/coming-soon.png" alt="VOGTLAND" />
-    <span>VOGTLAND</span>
-  </a>
-  <a class="brand-box" href="brands/sct_x4.html">
-    <img src="images/coming-soon.png" alt="SCT X4" />
-    <span>SCT X4</span>
-  </a>
-  <a class="brand-box" href="brands/mopar.html">
-    <img src="images/coming-soon.png" alt="MOPAR" />
-    <span>MOPAR</span>
-  </a>
-  <a class="brand-box" href="brands/lukrepset.html">
-    <img src="images/coming-soon.png" alt="LUkRepSet" />
-    <span>LUkRepSet</span>
-  </a>
-</div>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>متجر KRS لقطع التعديل والتزويد</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0; }
+    header { text-align: center; padding: 20px; background: #222; color: white; }
+    header img { max-width: 150px; }
+    .brands-grid { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; padding: 20px; }
+    .brand-box { background: white; border-radius: 8px; width: 120px; text-align: center; padding: 10px; box-shadow: 0 0 8px #ccc; text-decoration: none; color: #333; }
+    .brand-box img { max-width: 80px; margin-bottom: 8px; }
+    .brand-box span { display: block; font-weight: bold; }
+    footer { text-align: center; padding: 15px; background: #222; color: white; font-size: 14px; }
+    footer a { color: #9fceff; text-decoration: none; margin: 0 5px; }
+    footer a:hover { text-decoration: underline; }
+  </style>
+</head>
+<body>
+
+<header>
+  <img src="images/logo-krs.png" alt="شعار متجر KRS" />
+  <h1>متجر KRS لقطع التعديل والتزويد</h1>
+  <p>تعديل وتزويد المحركات الأمريكية – نوفر أكثر من 40 ماركة عالمية</p>
+</header>
+
+<main>
+  <div class="brands-grid">
+    <a class="brand-box" href="brands/msd.html">
+      <img src="images/msd.png" alt="MSD" />
+      <span>MSD</span>
+    </a>
+    <a class="brand-box" href="brands/exceed.html">
+      <img src="images/coming-soon.png" alt="EXCEED" />
+      <span>EXCEED</span>
+    </a>
+    <a class="brand-box" href="brands/btr.html">
+      <img src="images/coming-soon.png" alt="BTR" />
+      <span>BTR</span>
+    </a>
+    <!-- أضف باقي الماركات بنفس الطريقة -->
+  </div>
+</main>
+
+<footer>
+  <p>للتواصل: 0544298850 / 0504214480 / 0548420912</p>
+  <p>
+    سناب: <a href="https://www.snapchat.com/add/khaledqadi2002" target="_blank" rel="noopener noreferrer">khaledqadi2002</a> |
+    إنستقرام: <a href="https://www.instagram.com/kldss" target="_blank" rel="noopener noreferrer">kldss</a> |
+    واتساب: <a href="https://wa.me/966544298850" target="_blank" rel="noopener noreferrer">0544298850</a>
+  </p>
+</footer>
+
+</body>
+</html>
