--- a/brands/msd.html
+++ b/brands/msd.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -11,7 +10,7 @@
     <h1>منتجات MSD</h1>
   </header>
   <main>
-    <p>هنا تقدر تضيف تفاصيل المنتجات والصور والأسعار.</p>
+    <p>هنا تضيف قطع MSD المتوفرة مع صور وأسعار.</p>
     <a href="../index.html">العودة للرئيسية</a>
   </main>
 </body>
