--- a/brands/msd.html
+++ b/brands/msd.html
@@ -9,9 +9,34 @@
   <header>
     <h1>منتجات MSD</h1>
   </header>
+
   <main>
-    <p>هنا تضيف قطع MSD المتوفرة مع صور وأسعار.</p>
-    <a href="../index.html">العودة للرئيسية</a>
+    <section class="products">
+
+      <div class="product">
+        <img src="../images/msd/coil.jpg" alt="كويل MSD" />
+        <h3>كويل عالي الأداء MSD</h3>
+        <p>السعر: 450 ريال</p>
+        <a href="https://wa.me/966544298850?text=أرغب%20بشراء%20كويل%20MSD" target="_blank">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="../images/msd/wires.jpg" alt="أسلاك بواجي MSD" />
+        <h3>أسلاك بواجي MSD</h3>
+        <p>السعر: 250 ريال</p>
+        <a href="https://wa.me/966544298850?text=أرغب%20بشراء%20أسلاك%20بواجي%20MSD" target="_blank">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="../images/msd/ecu.jpg" alt="كمبيوتر MSD" />
+        <h3>كمبيوتر تحكم MSD</h3>
+        <p>السعر: 1200 ريال</p>
+        <a href="https://wa.me/966544298850?text=أرغب%20بشراء%20كمبيوتر%20MSD" target="_blank">اطلب عبر واتساب</a>
+      </div>
+
+    </section>
+
+    <p><a href="../index.html">⬅ العودة إلى الصفحة الرئيسية</a></p>
   </main>
 </body>
 </html>
